<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <!--title部分 -->
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/take_round_photo_clip_bg" >

       <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/take_round_photo_back"
                android:src="@drawable/take_round_photo_arrow_left" />

            <TextView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/back"
                android:gravity="center_vertical"
                android:text="@string/take_round_photo_back"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:text="@string/take_round_photo_clip"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout> -->
    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_header" />
    

    <!--裁剪的布局 -->
    <com.beijing.beixin.utils.takeRoundPhotoSDK.view.ClipImageLayout
        android:id="@+id/id_clipImageLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/rl_botom"
        android:layout_below="@+id/title_bar" />

    <RelativeLayout
        android:id="@+id/rl_botom"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#1F1F1F" >

        <Button
            android:id="@+id/id_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:padding="5dp"
            android:text="取消"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
        
        <Button
            android:id="@+id/id_action_clip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginRight="50dp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/take_round_photo_true"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>