<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/left_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/above_app"
            android:src="@drawable/title_bar_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/right_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="10dp"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="visible" />
    </LinearLayout>
    <!-- 用户名 -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <TextView
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_dark_red"
            android:gravity="center"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textsize16" />

        <TextView
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_rounded_shape"
            android:gravity="center"
            android:text="注册"
            android:textColor="@color/common_dark_red"
            android:textSize="@dimen/tv_textsize16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/username_or_phone"
                android:inputType="number"
                android:maxLength="11"
                android:paddingRight="20dp"
                android:text="18762608660"
                android:textColorHint="@color/text_hint"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/gray_line" />

        <!-- 密码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingRight="20dp"
                android:textColorHint="@color/text_hint"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/toggleButtonIsLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@android:color/transparent"
                android:button="@drawable/common_toggle_selector"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/gray_line" />

        <!-- 登录 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/common_dark_red"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
        <!-- 记住密码/自动登录 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:textColor="@color/pwd_text_hint"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/automatic_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd_yes"
                android:textColor="@color/pwd_text_hint"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/register_et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/username_or_phone"
                android:inputType="number"
                android:maxLength="11"
                android:textColorHint="@color/text_hint"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/line" />
        <!-- 密码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:maxLength="20"
                android:textColorHint="@color/text_hint"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/toggleButtonRegisterLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@android:color/transparent"
                android:button="@drawable/common_toggle_selector"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/line" />
        <!-- 验证码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ed_mobileValidateCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="输入验证码"
                android:inputType="number"
                android:maxLength="11"
                android:paddingRight="20dp"
                android:textColorHint="@color/text_hint"
                android:textSize="14sp" />

            <Button
                android:id="@+id/send_again"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/red_rounded_shape"
                android:clickable="false"
                android:gravity="center"
                android:text="获取验证码"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/line" />
        <!-- 注册 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/common_dark_red"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
         <LinearLayout
             android:id="@+id/ll_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:orientation="horizontal" >
          <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我同意该隐私条款"
                android:textColor="@color/pwd_text_hint"
                android:textSize="14sp" />
            </LinearLayout>
    </LinearLayout>

    <!-- 没有账号，点击注册 -->

    <LinearLayout
        android:id="@+id/layout_forget_psw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center|bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="忘记密码？"
            android:textColor="@color/text_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/onclick_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="点击找回"
            android:textColor="@color/pwd_text_hint"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>